# HackUTD2025

./: .gitignore  ANALYTICS_DESIGN_SPECS.md  CLAUDE.md  DESIGN_REFINEMENT.md  ENHANCEMENT_PROMPT_SHORT.md  LICENSE  PREDICTIVE_ANALYTICS_IMPLEMENTATION.md  PROMPT_PREDICTIVE_ANALYTICS_ENHANCEMENT.md  QUICK_START_GUIDE.md  README.md  RUN_INSTRUCTIONS.md  VISUAL_COMPARISON.md  package-lock.json  package.json
.cursor/: mcp.json
.github/workflows/: backend-tests.yml
.next/: trace
.next/server/: server-reference-manifest.json
app/: layout.tsx  page.tsx
app/components/: ChatPanel.tsx  ChatResponse.tsx  CommandDock.tsx  Dashboard.tsx  DocumentInsights.tsx  DocumentUpload.tsx  InsightSummaryDashboard.tsx  MessageBubble.tsx  ModeSwitch.tsx  PropertyDiscovery.tsx  PropertyGrid.tsx  Sidebar.tsx  (+3 more)
crewai-llama-system/: .env  .env.example  README.md  main.py  pyproject.toml  python_ai_frameworks_2025_report.md  requirements.txt  research_report_langraph.md  run_config.py  test_gemini.py  test_gemini_models.py
crewai-llama-system/config/: __init__.py  llm_config.py
crewai-llama-system/examples/: project_planning_example.py  simple_research_example.py
crewai-llama-system/src/: __init__.py
crewai-llama-system/src/agents/: __init__.py
crewai-llama-system/src/crews/: project_planning_crew.py  research_crew.py
crewai-llama-system/src/tools/: __init__.py  custom_tools.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
parser/: gemini_ocr_service.py  property_zillow_parser.py  test_property_zillow_parser.py
src/: App.tsx  index.css
(+115 files in other folders)
